# raster-detect-voids

./: .gitignore  main.py  pyproject.toml  report.py  scratch.ipynb  timing.py  walk.py
data/vector/: base.geojson  boundary.geojson  mask-raster-template.geojson
